# integer-sqrt-rs

./: Cargo.toml  LICENSE-MIT  README.md
benches/: sqrt.rs
src/: lib.rs
