[package]
name = "integer-sqrt"
description = """
An implementation of integer square root algorithm for primitive rust types"""
version = "0.1.2"
authors = ["Richard Dodd <richard.dodd@itp-group.co.uk>"]
include = ["src/**/*.rs", "Cargo.toml"]
repository = "https://github.com/derekdreery/integer-sqrt-rs"
readme = "README.md"
keywords = ["integer", "square", "root", "isqrt", "sqrt"]
categories = ["algorithms", "no-std"]
license = "Apache-2.0/MIT"

