[package]
name = "integer-sqrt"
description = """
An implementation of integer square root algorithm for primitive rust types"""
version = "0.1.5"
authors = ["Richard Dodd <richard.o.dodd@gmail.com>", "Joseph Richey", "Sergei Shulepov"]
include = ["src/**/*.rs", "Cargo.toml"]
repository = "https://github.com/derekdreery/integer-sqrt-rs"
readme = "README.md"
keywords = ["integer", "square", "root", "isqrt", "sqrt"]
categories = ["algorithms", "no-std"]
license = "Apache-2.0/MIT"

[dependencies]
num-traits = { version = "0.2", default-features = false }
